Fix issue with card tooltips on FireFox

--- a/app/scripts/src/less/ui/replay/tooltip.less
+++ b/app/scripts/src/less/ui/replay/tooltip.less
@@ -31,8 +31,8 @@
     .rendered-card.rendered-card.rendered-card.rendered-card.rendered-card {
         width: 50%;
         font-size: 1.2em;
-        display: flex;
-        flex-direction: column;
+        // display: flex;
+        // flex-direction: column;
 
         .card-cost {
             font-size: 2.5em;
